--- a/virtual_ut/Main.storyboard
+++ b/virtual_ut/Main.storyboard
@@ -225,7 +225,7 @@
                 <exit id="eWM-HH-BwA" userLabel="Exit" sceneMemberID="exit"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rP4-KA-KS4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-652" y="-1727"/>
+            <point key="canvasLocation" x="-592" y="-127"/>
         </scene>
         <!--Navigation Controller - Recherche-->
         <scene sceneID="bLv-Qq-rpp">
@@ -257,7 +257,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hW2-ky-V0i">
-                                <rect key="frame" x="110" y="376" width="118" height="30"/>
+                                <rect key="frame" x="110" y="402" width="118" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
                                 <state key="normal" title="rechercher">
@@ -269,7 +269,7 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="mots clés" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7aU-bG-Kb0">
-                                <rect key="frame" x="20" y="342" width="280" height="30"/>
+                                <rect key="frame" x="20" y="355" width="280" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -278,49 +278,63 @@
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="min" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kfR-wJ-8gO">
-                                <rect key="frame" x="20" y="285" width="97" height="30"/>
+                                <rect key="frame" x="20" y="298" width="73" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
                                     <action selector="textFieldReturn:" destination="DwG-BO-wG1" eventType="editingDidEndOnExit" id="xgD-7D-Cpc"/>
                                 </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="max" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Uw-Po-PgS">
-                                <rect key="frame" x="203" y="285" width="97" height="30"/>
+                                <rect key="frame" x="203" y="298" width="73" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 <connections>
                                     <action selector="textFieldReturn:" destination="DwG-BO-wG1" eventType="editingDidEndOnExit" id="g3s-rw-1wF"/>
                                 </connections>
                             </textField>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9UF-WC-8kf">
-                                <rect key="frame" x="20" y="330" width="280" height="1"/>
+                                <rect key="frame" x="20" y="343" width="280" height="1"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.00042700054759999998" green="0.38297723830000002" blue="0.70017408290000005" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2YF-Jd-ad7">
-                                <rect key="frame" x="20" y="276" width="280" height="1"/>
+                                <rect key="frame" x="20" y="289" width="280" height="1"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.00042700054759999998" green="0.38297723830000002" blue="0.70017408290000005" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="prix" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D99-Aa-A39">
-                                <rect key="frame" x="148" y="289" width="42" height="21"/>
+                                <rect key="frame" x="148" y="302" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.98346212639999997" green="0.38927880590000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="€" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gN3-ww-7gm">
+                                <rect key="frame" x="97" y="302" width="17" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.98346212639999997" green="0.38927880590000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="€" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhT-JD-hDV">
+                                <rect key="frame" x="282" y="302" width="17" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" red="0.98346212639999997" green="0.38927880590000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="catégories" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r6U-2W-o9b">
-                                <rect key="frame" x="123" y="70" width="115" height="24"/>
+                                <rect key="frame" x="123" y="83" width="115" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <color key="textColor" red="0.98346212639999997" green="0.38927880590000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EOV-6D-MIr">
-                                <rect key="frame" x="0.0" y="78" width="320" height="162"/>
+                                <rect key="frame" x="0.0" y="91" width="320" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.49999999999999961" height="1"/>
                             </pickerView>
@@ -336,12 +350,22 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.00042700054759999998" green="0.38297723830000002" blue="0.70017408290000005" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="SYh-So-QzZ">
+                                <rect key="frame" x="28" y="51" width="282" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="offre"/>
+                                    <segment title="demande"/>
+                                </segments>
+                                <color key="tintColor" red="0.00042700054759999998" green="0.38297723830000002" blue="0.70017408290000005" alpha="1" colorSpace="calibratedRGB"/>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Recherche" image="search.png" id="SNZ-eR-6Bv"/>
                     <navigationItem key="navigationItem" id="Qez-hN-0mq"/>
                     <connections>
+                        <outlet property="boutonOfffreDemande" destination="SYh-So-QzZ" id="N5k-Ti-pjo"/>
                         <outlet property="boutonRechercher" destination="hW2-ky-V0i" id="f9E-xm-GZI"/>
                         <outlet property="champRecherche" destination="7aU-bG-Kb0" id="GyS-qy-9Xe"/>
                         <outlet property="pickerCategories" destination="EOV-6D-MIr" id="xv4-Pd-1Sx"/>
@@ -351,7 +375,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XhH-XS-nxz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1034" y="44"/>
+            <point key="canvasLocation" x="1032" y="44"/>
         </scene>
         <!--View Controller - Recherche-->
         <scene sceneID="w8y-4G-5HI">
@@ -390,6 +414,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Recherche" image="search.png" id="idD-yb-7lV"/>
                     <navigationItem key="navigationItem" id="bM0-az-yPy"/>
+                    <connections>
+                        <segue destination="lSM-SG-gph" kind="push" id="hbA-1y-tJi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pyN-VS-U1i" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="bEZ-Xj-mFh" userLabel="Exit" sceneMemberID="exit"/>
@@ -586,10 +613,32 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Fil d'actualités" image="share.png" id="Gko-Iz-pw6"/>
+                    <connections>
+                        <segue destination="lSM-SG-gph" kind="push" id="cGi-oJ-91h"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jq0-R1-8EP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="512" y="-1384"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="dNO-or-Hf2">
+            <objects>
+                <viewController id="lSM-SG-gph" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xjE-OA-YfK"/>
+                        <viewControllerLayoutGuide type="bottom" id="QV6-Gg-4Wt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IYR-HZ-K59">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="5Oi-Uh-zB3"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qsR-am-kH3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2280" y="-576"/>
         </scene>
         <!--View Controller - Annonces sauvegardées-->
         <scene sceneID="Vk2-3U-V0r">
@@ -625,6 +674,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Annonces sauvegardées" image="paper-clip.png" id="iqK-rI-HuT"/>
                     <navigationItem key="navigationItem" id="bD3-pB-6V0"/>
+                    <connections>
+                        <segue destination="lSM-SG-gph" kind="push" id="DRj-7b-bw4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9yu-U9-wwD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -753,8 +805,8 @@
                                 <rect key="frame" x="0.0" y="88" width="320" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="zFn-DB-iEF">
-                                <rect key="frame" x="96" y="49" width="143" height="29"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="zFn-DB-iEF">
+                                <rect key="frame" x="18" y="49" width="282" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="offre"/>
@@ -791,4 +843,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="hbA-1y-tJi"/>
+    </inferredMetricsTieBreakers>
 </document>
